--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bayard-proto"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
 edition = "2018"
 description = "Protocol Buffers for Bayard"
@@ -14,12 +14,7 @@ license = "MIT"
 build = "build.rs"
 
 [dependencies]
-grpc = "0.6.2"
+futures = "0.1.29"
+grpcio = { version = "0.4.7", features = [ "secure" ] }
 protobuf = "2.8.0"
 raft = "0.4.3"
-
-[build-dependencies]
-protobuf-codegen-pure = "2.8.0"
-protoc = "2.8.0"
-protoc-rust = "2.8.0"
-protoc-rust-grpc = "0.6.2"
